# motoko-rust-starter

./: .gitignore  .gitpod.yml  Cargo.toml  README.md
scripts/: build.sh  run.sh
src/motoko/: Main.mo
src/rust/: lib.rs
src/wac/: composition.wac
src/wit/: motoko.wit  rust.wit
