[package]
name = "component"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "rust:component"

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
wit-bindgen = "0.27"

# For ECDSA verification example
candid = "0.10.9"
ethers-core = "2.0.14"
getrandom = { version = "*", features = ["custom"], default-features = false }
hex = "0.4.3"
serde = "1.0"
